# ECN_Baxter

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: PointsSetup.action
components/: gripper_node.cpp
components/gripper/: gripper_node.cpp  gripper_node.h
game/: game_master.cpp  gui_wrapper.cpp  node.cpp  node2.cpp  setup_node.cpp  step_node.cpp
gui/: ui_node.py
gui/ecn_baxter/: GUINode.py
include/: async_timer.hpp  gripper_node.h
include/ecn_baxter/: async_timer.hpp  package_data.hpp  utils.hpp
include/ecn_baxter/base/: base_action_client.hpp  base_action_server.hpp  base_gui.hpp  base_server.hpp
include/ecn_baxter/components/: gripper_node.hpp
include/ecn_baxter/game/: game.hpp  game_master_1.hpp  game_master_2.hpp  game_properties.hpp  gui_wrapper.hpp  node.hpp  node1.hpp  node2.hpp  properties_loader.hpp  setup_node.hpp  step_node.hpp
include/ecn_baxter/game/data/: arm_side.hpp  game_players.hpp  game_properties.hpp  local_games.hpp
include/ecn_baxter/game/events/: auth_refresh_event.hpp  bridges_update_events.hpp  event_target.hpp  log_event.hpp  setup_ended.hpp
include/ecn_baxter/game/master/: game.hpp  gui_management.hpp
include/ecn_baxter/game/ros1/: bridge_lookup.hpp  game_master_1.hpp  tf_broadcast.hpp
include/ecn_baxter/game/ros2/: client_points.hpp  game_master_2.hpp
include/ecn_baxter/game/structures/: arm_side.hpp  game_players.hpp
include/ecn_baxter/game/ui/: file_loader_wrapper.hpp  log_view.hpp  main_wrapper.hpp
include/ecn_baxter/game/utils/: logger.hpp  qtevents.hpp
include/ecn_baxter/gripper/: gripper_node.hpp
include/ecn_baxter/setup/: base_server.hpp  client_points.hpp  point_server.hpp  setup_server.hpp
include/ecn_baxter/ui/: base_gui.hpp  file_loader_wrapper.hpp  main_wrapper.hpp
include/ecn_baxter/utils/: color_detector.hpp  joint_states_wrapper.hpp  qtevents.hpp
include/rapidjson/: document.h  rapidjson.h  reader.h  schema.h
include/rapidjson/internal/: regex.h
launch/: master.py
msg/: BaxterAction.msg  VacuumSensor.msg
resource/: qevent_name_factory.ods
resource/games/: lab_sort.bgame  test1.bgame  test2.bgame
resource/launch/: master.py
resource/ui/: game_loader.ui  main.ui
src/: gripper_node.cpp
src/components/: gripper_node.cpp
src/game/: game.cpp  game_master.cpp  game_master_1.cpp  game_master_2.cpp  gui_wrapper.cpp  node.cpp  node1.cpp  node2.cpp  node2_setup.cpp  properties_loader.cpp  setup_node.cpp  step_node.cpp
src/game/data/: game_properties.cpp  local_games.cpp
src/game/events/: register_events.cpp
src/game/master/: game.cpp  gui_management.cpp
src/game/ros1/: bridge_lookup.cpp  game_master_1.cpp  tf_broadcast.cpp
src/game/ros2/: client_points.cpp  game_master_2.cpp  setup_client.cpp
src/game/ui/: file_loader_wrapper.cpp  log_view.cpp  main_wrapper.cpp
src/game/utils/: logger.cpp
src/legacy/game/: node2.cpp  node2_setup.cpp
src/legacy/game/ros2/: setup_client.cpp
src/legacy/setup/: setup_client.cpp
src/setup/: client_points.cpp  point_server.cpp  setup_client.cpp  setup_node.cpp  setup_server.cpp
src/ui/: file_loader_wrapper.cpp  main_wrapper.cpp
src/utils/: arms_position.cpp  ball_detector.cpp  color_detector.cpp  color_tester.cpp  jacobian.cpp
srv/: Jacobian.srv
