<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ecn_baxter</name>
  <version>0.1.0</version>
  <description>Baxter's component ROS2 utilitary tool </description>
  <maintainer email="geoffrey.cote@centraliens-nantes.org">Geoffrey Côte</maintainer>
  <maintainer email="timothee.corroenne@eleves.ec-nantes.fr">Timothée CORROËNNE</maintainer>
  <author>Geoffrey Côte</author>
  <author>Timothée Corroënne</author>
  <url type="repository">https://github.com/Meltwin-ECN/ecn_baxter</url>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>baxter_bridge</depend>
  <depend>ament_index</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>Qt5</depend>
  <depend>baxter_core_msgs</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>frames</depend>
  <depend>Eigen3</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>OpenCV</depend>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_package</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
